payas-server-core/src/validation/snapshots/payas_server__validation__document_validator__tests__invalid_subfield.snap
---
source: payas-server/src/validation/document_validator.rs
expression: validator.validate(create_query_document(query))
---
Err(
    InvalidField(
        "foobar",
        Pos(6:21),
    ),
)
