payas-server-core/src/validation/snapshots/payas_server__validation__document_validator__tests__unspecified_required_argument_invalid.snap
---
source: payas-server/src/validation/document_validator.rs
expression: validator.validate(create_query_document(query))
---
Err(
    RequiredArgumentNotFound(
        "id",
        Pos(3:17),
    ),
)
